Started work on roll function

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p class="slot">Test</p>
         <p class="slot">Test</p>
         <p class="slot">Test</p>
+        <button onclick="roll()" type="button" class="rollbtn">Roll</button>
     </div>
     <div>
         <p>something here</p>
