Done minor work on code

--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
 <div class="box">
     <div class="coin">
-        <p>something here</p>
-    </div>
-    <div>
-        <p class="slot">Test</p>
-        <p class="slot">Test</p>
-        <p class="slot">Test</p>
         <button onclick="roll()" type="button" class="rollbtn">Roll</button>
+    </div>
+    <div class="mid">
+        <p id="roll1" class="slot"></p>
+        <p id="roll2" class="slot"></p>
+        <p id="roll3" class="slot"></p>
     </div>
     <div>
         <p>something here</p>
