bad attempts at making a lock function

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 <div class="box">
     <div class="coin">
         <button onclick="roll()" type="button" class="rollbtn">Roll</button>
+        <button onclick="lock1()" type="button" class="rollbtn">Lock 1</button>
+        <button onclick="lock2()" type="button" class="rollbtn">Lock 2</button>
+        <button onclick="lock3()" type="button" class="rollbtn">Lock 3</button>
     </div>
     <div class="mid">
-        <p id="roll1" class="slot"></p>
+        <p id="roll1" class="slot"></p> 
         <p id="roll2" class="slot"></p>
         <p id="roll3" class="slot"></p>
     </div>
     <div>
-        <p>something here</p>
+        <p id=lock1></p>
     </div>
 
 </div>
