Did some work on point system

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <div class="box">
     <div class="coin">
         <button onclick="roll()" type="button" class="rollbtn">Roll</button>
-        <button onclick="lock1()" type="button" class="rollbtn">Lock 1</button>
-        <button onclick="lock2()" type="button" class="rollbtn">Lock 2</button>
-        <button onclick="lock3()" type="button" class="rollbtn">Lock 3</button>
+        <button onclick="lock(slot1)" type="button" class="rollbtn">Lock 1</button>
+        <button onclick="lock(slot2)" type="button" class="rollbtn">Lock 2</button>
+        <button onclick="lock(slot3)" type="button" class="rollbtn">Lock 3</button>
     </div>
     <div class="mid">
         <p id="roll1" class="slot"></p> 
@@ -20,7 +20,7 @@
         <p id="roll3" class="slot"></p>
     </div>
     <div>
-        <p id=lock1></p>
+        <p id=lock></p>
     </div>
 
 </div>
